add logo and changes in index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/ufg7hqz.css">
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-		<title>Kloe Yap</title>
+		<title>KLOE YAP</title>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153644395-1"></script>
@@ -40,10 +40,9 @@
 			<section id="home-section">
 				<div class="container row">
 					<div class="container row" id="landing-container">
-						<!-- //fix this  -->
-						<!-- <img src="assets/img/Hammock.webp" id="profile-icon"> -->
+						<!-- <img src="assets/img/profile.png" id="profile-icon"> -->
 						<div class="container column" id="landing-text">
-							<h1 class="title">Kloe Yap</h1>
+							<h1 class="title">KLOE YAP</h1>
 							<p id="app"></p>
 						</div>
 					</div>
@@ -117,8 +116,8 @@
 									<br>
 									<span class="fourth-color">"calligraphy"</span><span class="second-color">,</span>
 									<br>
-									<!-- <span class="fourth-color">"listening to Vinyl"</span>
-									<br> -->
+									<span class="fourth-color">"making cocktails"</span>
+									<br>
 								</ul>
 								<span class="second-color">}</span>
 								<br>
@@ -175,7 +174,7 @@
 						<img src="assets/img/logo.png">
 						<div class="container column" id="school">
 							<h2>University of California, Berkeley</h2>
-							<h3>B.A. - Data Science</h3>
+							<h3>B.A. - Data Science with a Domain Emphasis in Social Policy & Law</h3>
 							<p>Graduation: May 2024</p>
 						</div>
 					</div>
@@ -184,7 +183,7 @@
 						<p>Computer Science</p>
 						<ul>
 							<li>Data Structures (CS 61B)</li>
-							<li>Python, C++, and MATLAB</li>
+							<li>Additional classes in Python, C++, and MATLAB</li>
 						</ul>
 						<p>Mathematics</p>
 						<ul>
